--- a/source/user-guest/code/views/partials/toolbar.ejs
+++ b/source/user-guest/code/views/partials/toolbar.ejs
@@ -1,12 +1,9 @@
-<div>
-    <h1>HOME PAGE chưa đăng nhập</h1>
-</div>
-<div>
-    <a href="/users/register"><button type="button" class="btn btn-light">ĐĂNG KÝ</button>
-</div>
-<div>
+<div style="display: inline-block;">
+    <a class="btn btn-primary" href="/" role="button">
+        <i class="fa fa-home" aria-hidden="true"></i>
+        HOME
+    </a>
+    <a href="/users/register"><button type="button" class="btn btn-light">ĐĂNG KÝ</button></a>
     <a href="/users/login"><button type="button" class="btn btn-danger">ĐĂNG NHẬP</button></a>
-</div>
-<div>
     <a href="/users/auth/facebook"><button type="button" class="btn btn-info">FACEBOOK LOGIN</button></a>
 </div>
