--- a/source/user-guest/code/views/partials/toolbarAuth.ejs
+++ b/source/user-guest/code/views/partials/toolbarAuth.ejs
@@ -1,9 +1,5 @@
-<div>
-    <h1>HOME PAGE đã đăng nhập</h1>
-</div>
-<div>
-    <a href="/users/account"><button type="button" class="btn btn-info">TÀI KHOẢN</button>
-</div>
-<div>
+<div style="display: inline-block;">
+    <a href="/users/account"><button type="button" class="btn btn-info">TÀI KHOẢN</button></a>
     <a href="/users/logout"><button type="button" class="btn btn-secondary">ĐĂNG XUẤT</button></a>
+    <a href="/users/my-wish-list"></a>
 </div>
