--- a/source/user-guest/code/views/user/my-wish-list.ejs
+++ b/source/user-guest/code/views/user/my-wish-list.ejs
@@ -18,46 +18,32 @@
 
 </style>
 <div class="jumbotron">
-    <% if(isAuthenticated) {%>
-    <%- include('../partials/toolbarAuth'); %>
-    <% } %>
-    <%  if(!isAuthenticated){ %>
-    <%- include('../partials/toolbar'); %>
-    <% } %>
+    <%- include('../partials/toolbar', {isAuthenticated: isAuthenticated});  %> 
 </div>
 <div>
     <h2>Các khóa học nổi bật nhất tuần qua</h2>
-    <% for( let i = 0; i < proCourses.length; i++ ) { %>
-    <a href="/course/<%= proCourses[i].name %>">
-        <div class="wish-courses" data-id="<%= proCourses[i]._id %>">
+    <% for( let i = 0; i < courses.length; i++ ) { %>
+    <a href="/course/<%= courses[i].name %>">
+        <div class="wish-courses">
             <div class="courses">
-                <img src="<%= proCourses[i].poster%>" width="285px" height="150px">
-                <h4 class="name" data-id="<%= proCourses[i]._id %>"><%=  proCourses[i].name%> </h4>
-                <p class="lecturer"><%=  proCourses[i].idLecturer.name%></p>
-                <p class="evaluation" style="display: inline-block;"><%=  proCourses[i].evaluationPoint%></p>
+                <img src="<%= courses[i].poster%>" width="285px" height="150px">
+                <h4 class="name"><%=  courses[i].name%> </h4>
+                <p class="lecturer"><%=  courses[i].idLecturer.name%></p>
+                <p class="evaluation" style="display: inline-block;"><%=  courses[i].evaluationPoint%></p>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
-                <p style="display: inline-block;" class="numberOfEvaluation"><%=  proCourses[i].numberOfEvaluation%>
+                <p style="display: inline-block;" class="numberOfEvaluation"><%=  courses[i].numberOfEvaluation%>
                 </p>
-                <p class="tuition">$<%=  proCourses[i].tuition%></p>
+                <p class="tuition">$<%=  courses[i].tuition%></p>
             </div>
             <div class="courses-detail">
-                <p><%=  proCourses[i].numberOfStudent%> Studying</p>
-                <p><%=  proCourses[i].idCourseCategory.name%></p>
+                <p><%=  courses[i].numberOfStudent%> Studying</p>
+                <p><%=  courses[i].idCourseTopic.name%></p>
             </div>
         </div>
     </a>
     <% } %>
 </div>
-<form id="myForm" action="" method="GET">
-    <!-- <input type="text" name="courseID" id="courseID"> -->
-</form>
-<script type="text/javascript">
-    // $('.prom-courses').on('click', (e) => {
-    //     console.log('HELLO');
-    // })
-    
-</script>
