--- a/source/user-guest/code/views/partials/toolbar.ejs
+++ b/source/user-guest/code/views/partials/toolbar.ejs
@@ -11,9 +11,9 @@
     <% if (isAuthenticated) { %>
     <a href="/users/account"><button type="button" class="btn btn-info">TÀI KHOẢN</button></a>
     <a href="/users/logout"><button type="button" class="btn btn-secondary">ĐĂNG XUẤT</button></a>
-    <a href="/users/my-wish-list"><button type="button" class="btn btn-light"><i class="fa fa-heart" aria-hidden="true"
+    <a href="/my-wish-list"><button type="button" class="btn btn-light"><i class="fa fa-heart" aria-hidden="true"
                 style="color:red;"></i> YÊU THÍCH</button></a>
-    <a href=""><button type="button" class="btn btn-light"><i class="fas fa-folder-open" style="color: darkorange;"></i> Khóa học của
+    <a href="/my-courses"><button type="button" class="btn btn-light"><i class="fas fa-folder-open" style="color: darkorange;"></i> Khóa học của
             tôi</button></a>
     <% } %>
 
