--- a/source/admin/views/admin/account/edit.ejs
+++ b/source/admin/views/admin/account/edit.ejs
@@ -6,9 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d62abf4f8f.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/js/fileinput.min.js" integrity="sha512-vDrq7v1F/VUDuBTB+eILVfb9ErriIMW7Dn3JC/HOQLI8ZzTBTRRKrKJO3vfMmZFQpEGVpi+EYJFatPgVFxOKGA==" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/css/fileinput.min.css" integrity="sha512-8KeRJXvPns3KF9uGWdZW18Azo4c1SG8dy2IqiMBq8Il1wdj7EWtR3EGLwj+DnvznrRjn0oyBU+OEwJk7A79n7w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/stylesheet.css">
     
 </head>
@@ -20,28 +22,31 @@
           <div class="user-info">
               <div class="row">
                 <div class="col-sm-4 image">
-                  <img src=" <%=user.avatar%>">
+                  <img src=" <%=user.avatar%>" id="avatar-img">
                   <div class="avatar-update">
-                      <button class="btn btn-success"> Cập nhập avatar </button>
+                    <form action="/admin/upload" enctype="multipart/form-data" method="POST" >
+                        <input type="file" name="file" id="file"/>
+                     </form>
+                     <button class="btn btn-success" id="avartar-upload" > Thay avatar </button>
                   </div>
                 </div>
                 <div class="col-sm-8 info">
                   <div class="form-group">
                       <label class ="col-sm-2 control-label" for="my-input">Name:</label>
                       <div class="col-sm-10">
-                        <input  id="my-input" class="form-control" type="text" name="name" value="<%=user.name%>" >
+                        <input  class="form-control" type="text" name="name" value="<%=user.name%>" >
                       </div>
                   </div>
                   <div class="form-group">
                     <label class ="col-sm-2 control-label" for="my-input">Email:</label>
                     <div class="col-sm-10">
-                        <input  id="my-input" class="form-control" type="text" name="email" value="<%=user.email%>">
+                        <input  class="form-control" type="text" name="email" value="<%=user.email%>">
                       </div>
                   </div>
                   <div class="form-group">
                     <label class ="col-sm-2 control-label" for="my-input">Gender:</label>
                     <div class="col-sm-10">
-                        <select  id="my-input" class="form-control" type="text" name="gender">
+                        <select  class="form-control" type="text" name="gender">
                             <%if (user.gender == "nam") { %>
                                 <option value="nam" selected="selected"> Nam</option>
                                 <option value="nữ"> Nữ</option>
@@ -55,7 +60,7 @@
                   <div class="form-group">
                     <label class ="col-sm-2 control-label" for="my-input">Description:</label>
                     <div class="col-sm-10">
-                        <textarea  id="my-input" class="form-control" type="text" name="description" ><%=user.description%></textarea>
+                        <textarea  class="form-control" type="text" name="description" ><%=user.description%></textarea>
                     </div>
                   </div>
                 </div>
@@ -66,5 +71,38 @@
     </div>
     
 </body>
+<script>
+   $(document).ready(function() {
+    $('#avartar-upload').on('click', function() {
+        var fd = new FormData();
+        var files = $('#file')[0].files;
+        
+        // Check file selected or not
+        if(files.length > 0 ){
+           fd.append('file',files[0]);
+
+           $.ajax({
+              url: '/admin/upload',
+              type: 'post',
+              data: fd,
+              contentType: false,
+              processData: false,
+              success: function(response){
+                 if(response){
+                    var timestamp = new Date().getTime();     
+                    var el = document.getElementById("avatar-img");     
+                    el.src = response +"?t=" + timestamp; 
+                 }else{
+                    alert('file not uploaded');
+                 }
+              },
+           });
+        }else{
+           alert("Please select a file.");
+        }
+      return false;
+    });
+});
+</script>
 </html>
 
