--- a/source/admin/views/admin/common/column_left.ejs
+++ b/source/admin/views/admin/common/column_left.ejs
@@ -4,13 +4,13 @@
             <a href="/admin/account/edit">Thông tin tài khoản</a>
         </li>
         <li>
-            <a href="">Danh sách khóa học</a>
+            <a href="/admin/course/coursesList">Danh sách khóa học</a>
         </li>
         <li>
             <a href="">Danh sách học viên</a>
         </li>
         <li>
-            <a href="">Danh sách giảng viên</a>
+            <a href="/admin/lecturer/lecturersList">Danh sách giảng viên</a>
         </li>
     </ul>
 </nav>
