CRUD function for lecturer

--- a/source/admin/views/admin/common/column_left.ejs
+++ b/source/admin/views/admin/common/column_left.ejs
@@ -12,5 +12,8 @@
         <li>
             <a href="/admin/lecturer/lecturersList">Danh sách giảng viên</a>
         </li>
+        <li>
+            <a href="/admin/lecturer/lecturersList">Danh sách Category</a>
+        </li>
     </ul>
 </nav>
